// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets fix bug if wdb gameObjects share the same material, should only extrace the shared material once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAEBAQEBAQEBAQE"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        lightMaterial_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets material asset should has unique name 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-folderBox"
    id="folder-7"
    style={
      Object {
        "border": "0px",
      }
    }
  >
    <div
      className="item-ground"
      draggable={true}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
    />
    <div
      className="box-image"
    >
      <img
        src="./public/img/assetPackage.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Materials
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-folderBox"
    id="folder-9"
    style={
      Object {
        "border": "0px",
      }
    }
  >
    <div
      className="item-ground"
      draggable={true}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
    />
    <div
      className="box-image"
    >
      <img
        src="./public/img/assetPackage.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Textures
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Wdb
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="
data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAEBAQEBAQEBAQEBAQEBAQIBAQEBAQIBAQECAgICAgICAgIDAwQDAwMDAwICAwQDAwQEBAQEAgMFBQQEBQQEBAT/2wBDAQEBAQEBAQIBAQIEAwIDBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAT/wAARCAAyADIDASIAAhEBAxEB/8QAHgABAAIBBAMAAAAAAAAAAAAAAAkKBwEGCAsDBAX/xAA3EAABAwMCAwQHBgcAAAAAAAABAgMEAAUGBxEIEiEJExQxIiNBVHGT0QpCUWFigRUkQ1Ox4fH/xAAUAQEAAAAAAAAAAAAAAAAAAAAA/8QAFBEBAAAAAAAAAAAAAAAAAAAAAP/aAAwDAQACEQMRAD8AivqQDgl7NniR46Lq5J03s0LFNMLZcDbsk1izVt2Ph9udQAp2LAaQO/uUtII3jxtkIK0h19ncb4t4MOGyVxS68Yxpw89Jg4hGWL/qDd4ii1JhWhhxCXWWF/dkSlqRHaV90uLX/TrsLNAcPxHTzTTGMFweyW3G8Wxa0MWaw2G1MhiDbIrCAhtpCfM+W6lq3UtSlKUVKUSQhe0t+zpcJmN2xg6ralazaqX/ALvllO2y8Q9NMaUsjqpiHFZdlJAPUByW55dd63LnP2ePgkyC1OMYXlGuenV5S2oRrnEzmPmEIrO/Kp+HcIjnOB09Fpxrce3frU9VKChTxz9jpxJ8Glqu2olqeia46HWpJkXPULEbW5bL/h7HMsd7kFhUt1xhlISCqbFckR08wLhYBFRG/wDQR1BrtP5MdmUy8xIabfYfbUy6y6gPNOoUClSVJIIIIJBBBBBIIIqjL2z3Z8Wzg91ltWpuldoFu0C1vnSn7NZ4yCYWnWRNAybjZG+p5IkhtSpsJBICEplMJARHb3CFqlKUE53Y9ot1hazvI3EoTcrtkLFtLpHrEx4UdKkIB/DvJLqvjtVsrSTPY/h4ja3QULQEqHN0qkZ2fOrDWIXm94y8/wByXZqLqwkr5QtLiEtqIH5Ka6/EVZb0j1iZciwiJYO6U7Ar3oJw2Hm5DSHmVBbbg5kqB3Bry1w2wbW1Mdptp19DzJ23Q4rcD4Vm+Pq7YnkJJQUqPXo4Cmgy1UTHbY4LaM+7PHWxucyl+7YGm2aoY4oAlyJKs9yjd6tIAJ9KJJntH9Lyt9h1rn3c9XLe02ssqbbATuDzekP3qGjtbuIeLb+ELWOz/wAQSmXmNjawqCz3g5n3LlMjsqSkHff1QfUfyQfLzoKXhTsSNx0O3tpWhO5JHkTuKUH1sfyW7Ybe7fk9lU4qbbVlTkZo7LnsEjvGR+o7BSf1JA9pqZbh14trZerVb3WrohW6U86S5yrSfIpUD1BBBBB6ggg1ClXox03ix3FV7xK7OWO5uK55TJSXbTc1e0vtDYpWf7rfpH2hVBbywziJiutMFM9J5kgj1v8Aus5wuISOlA/n09B5B0VUTxXir1Oxptpi8Y9PmdyQgSrJLbuLLg/HlJS4P3TWWUccGXONLRFx3IQ7tygzEtwGevt5lr/wDQWZ8t4n4NthvvO3NpKUJPVT4A6D41XX48OKuVr1lUHE7LOU/huJTFy3Xm3eZi8XEpU1zj8UMIU4lJ9qnVkeQrjJm+v+pOesOQ7jdF2y3Ogpcg299ZW8k+aXHuhIPkQkAfmawvQKUpQbw8JE92j/ACU/SnhInu0f5KfpSlA8JE92j/JT9KeEie7R/kp+lKUDwkT3aP8AJT9KeEie7R/kp+lKUDwkT3aP8lP0pSlB/9k=
"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets should add "Materials" folder node and add material node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAEBAQEBAQEBAQE"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets should add "Materials" folder node and add material node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAEBAQEBAQEBAQE"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script event function assets if wdb->script event function data not exist in assets, extract them and add to assets should add "ScriptEventFunctions" folder node and add scriptEventFunction node into it test load the same wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptEventFunction.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script event function assets if wdb->script event function data not exist in assets, extract them and add to assets should add "ScriptEventFunctions" folder node and add scriptEventFunction node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptEventFunction.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets should add "Textures" folder node and add texture node into it test load the same wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url1"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets should add "Textures" folder node and add texture node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url2"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets texture asset should has unique name 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="texture1img"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url1"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0 1
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset if wdb has no material should has no extracted material assets and texture assets 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Wdb
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset test wdb is exported scene wdb test extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb fix bug fix geometry bug 
        1.create gameObject g1 in scene;
        2.load truck wdb asset w1;

        g1->geometry->select geometry group widget shouldn't has "NoName Geometry"
         1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
      title="geometry in use which is default or model's geometry"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_0
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_1
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_2
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wheels
        </div>
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb relate wdb asset gameObjects with default geometrys 
        1.create gameObject g1 with default cube geometry in scene;
        2.load wdb asset w1(has one cube gameObject with default cube geometry);

        g1->geometry->select geometry group widget should only have not-duplicate-default-geometrys and be using default cube geometry
         1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
      title="geometry in use which is default or model's geometry"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;
